[package]
name = "scribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1"
walkdir = "2.3.2"
chrono = "0.4.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
